--- a/ExplorativeDatenanalyse/ExplorativeDatenanalyse.ipynb
+++ b/ExplorativeDatenanalyse/ExplorativeDatenanalyse.ipynb
@@ -54,12 +54,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Verbindung zur DB herstellen"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Verbindung zur DB herstellen\n",
     "conn = psycopg2.connect(\n",
     "    host=\"localhost\",\n",
     "    database=\"PSQL_ADSFS2023Gruppe15\",\n",
@@ -137,6 +144,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SQL Queries für die DB Abfrage\n",
+    "#### Anschliessend die Daten aus den DB Tabellen lesen und in Dataframes speichern"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
@@ -167,7 +183,6 @@
     }
    ],
    "source": [
-    "# SQL Queries für die DB Abfrage\n",
     "query_tabelle = \"SELECT team_id, mannschaft, punkte, tore FROM bundesliga_mannschaften\"\n",
     "query_resultate = \"SELECT matchday, id_teamh, id_teamg, tore_teamh, tore_teamg, winner_team_id FROM bundesliga_resultate\"\n",
     "query_shots_stats = \"SELECT matchday, team_id, shots_total FROM bundesliga_shots_stats\"\n",
@@ -178,7 +193,6 @@
     "query_freekicks_stats = \"SELECT matchday, team_id, freekicks_total FROM bundesliga_freekicks\"\n",
     "query_touch_stats = \"SELECT matchday, team_id, touches_total FROM bundesliga_touch_stats\"\n",
     "\n",
-    "# Daten aus DB Tabellen lesen und in einem Dataframe speichern\n",
     "df_tabelle = pd.read_sql(query_tabelle, conn)\n",
     "df_resultate = pd.read_sql(query_resultate, conn)\n",
     "df_shots = pd.read_sql(query_shots_stats, conn)\n",
@@ -1870,7 +1884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
