--- a/WebScraping/Get_Data_Bundesliga_21_22.ipynb
+++ b/WebScraping/Get_Data_Bundesliga_21_22.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,70 +101,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_team_id(team_name):\n",
-    "    #Alle Teamnamen von kicker.de und whoscored.com anpassen, damit diese mit den Teamnamen in unserer Tabelle übereinstimmen\n",
+    "    # Alle Teamnamen von kicker.de und whoscored.com anpassen, damit diese mit den Teamnamen in unserer Tabelle übereinstimmen\n",
     "    if team_name == 'Gladbach':\n",
     "        team_name = 'Borussia Mönchengladbach'\n",
-    "    if team_name == '%Gladbach':\n",
+    "    if team_name == 'Gladbach':\n",
     "        team_name = 'Borussia Mönchengladbach'    \n",
     "    elif team_name == 'Hoffenheim':\n",
     "        team_name = 'TSG 1899 Hoffenheim'\n",
-    "    elif team_name == '%Bremen':\n",
+    "    elif team_name == 'Bremen':\n",
     "        team_name = 'Werder Bremen'\n",
-    "    elif team_name == '%Hoffenheim':\n",
+    "    elif team_name == 'Hoffenheim':\n",
     "        team_name = 'TSG 1899 Hoffenheim'\n",
-    "    elif team_name == '%Bremen':\n",
+    "    elif team_name == 'Bremen':\n",
     "        team_name = 'Werder Bremen'\n",
-    "    elif team_name == '%Bochum':\n",
+    "    elif team_name == 'Bochum':\n",
     "        team_name = 'VfL Bochum'\n",
-    "    elif team_name == '%Dortmund':\n",
+    "    elif team_name == 'Dortmund':\n",
     "        team_name = 'Borussia Dortmund'                \n",
-    "    elif team_name == '%Bayern':\n",
+    "    elif team_name == 'Bayern':\n",
     "        team_name = 'FC Bayern München'\n",
-    "    elif team_name == '%Bayern Munich':\n",
+    "    elif team_name == 'Bayern Munich':\n",
     "        team_name = 'FC Bayern München'        \n",
-    "    elif team_name == '%Frankfurt':\n",
+    "    elif team_name == 'Frankfurt':\n",
     "        team_name = 'Eintracht Frankfurt'                \n",
     "    elif team_name == 'Köln':\n",
     "        team_name = '1. FC Köln'\n",
-    "    elif team_name == '%Koln':\n",
+    "    elif team_name == 'Koln':\n",
     "        team_name = '1. FC Köln'    \n",
     "    elif team_name == 'Union':\n",
     "        team_name = '1. FC Union Berlin'                \n",
-    "    elif team_name == '%Mainz%': #Mainz 05\n",
+    "    elif team_name == 'Mainz':\n",
     "        team_name = '1. FSV Mainz 05'\n",
-    "    elif team_name == '%Hertha':\n",
+    "    elif team_name == 'Hertha':\n",
     "        team_name = 'Hertha BSC'\n",
-    "    elif team_name == '%Freiburg':\n",
+    "    elif team_name == 'Freiburg':\n",
     "        team_name = 'SC Freiburg'\n",
-    "    elif team_name == '%Stuttgart':\n",
+    "    elif team_name == 'Stuttgart':\n",
     "        team_name = 'VfB Stuttgart'                \n",
     "    elif team_name == 'Leverkusen':\n",
     "        team_name = 'Bayer Leverkusen'\n",
-    "    elif team_name == '%Leverkusen':\n",
+    "    elif team_name == 'Leverkusen':\n",
     "        team_name = 'Bayer Leverkusen'        \n",
     "    elif team_name == 'Leipzig':\n",
     "        team_name = 'RB Leipzig'         \n",
-    "    elif team_name == '%Wolfsburg':\n",
+    "    elif team_name == 'Wolfsburg':\n",
     "        team_name = 'VfL Wolfsburg'\n",
-    "    elif team_name == '%Augsburg':\n",
+    "    elif team_name == 'Augsburg':\n",
     "        team_name = 'FC Augsburg'              \n",
     "\n",
-    "#Abgestiegen: Fürht und Bielefeld > ignorieren einbauen nötig? Fehlt nun einfach hier\n",
-    "           \n",
     "    # Vergleicht Team Namen und sucht nach ID\n",
     "    cursor.execute(\"SELECT team_id FROM bundesliga_mannschaften WHERE mannschaft = %s\", (team_name,))\n",
-    "    result = cursor.fetchone()[0]\n",
+    "    result = cursor.fetchone()\n",
     "\n",
-    "    if result:\n",
-    "        return result\n",
+    "    if result:  # Überprüft, ob ein Ergebnis zurückgegeben wurde\n",
+    "        return result[0]\n",
     "    else:\n",
     "        print(f'Keine Übereinstimmung für {team_name} gefunden')\n",
-    "        return None\n"
+    "        return None\n",
+    "\n"
    ]
   },
   {
@@ -188,46 +187,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fehler beim Einfügen der Daten für Spieltag 1 und Laufleistung: could not convert string to float: '13.02 km'\n",
-      "Fehler beim Einfügen der Daten für Spieltag 2 und Laufleistung: could not convert string to float: '25.68 km'\n",
-      "Fehler beim Einfügen der Daten für Spieltag 3 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 4 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 5 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 6 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 7 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 8 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 9 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 10 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 11 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 12 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 13 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 14 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 15 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 16 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 17 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 18 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 19 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 20 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 21 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 22 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 23 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 24 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 25 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 26 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 27 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 28 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 29 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 30 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 31 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 32 und Laufleistung: 'NoneType' object is not subscriptable\n",
-      "Fehler beim Einfügen der Daten für Spieltag 33 und Laufleistung: 'NoneType' object is not subscriptable\n"
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n",
+      "Keine Übereinstimmung für Bielefeld gefunden\n",
+      "Team ID not found for team Bielefeld\n",
+      "Keine Übereinstimmung für Fürth gefunden\n",
+      "Team ID not found for team Fürth\n"
      ]
     }
    ],
@@ -244,19 +342,22 @@
     "        try:\n",
     "            for team_element, distance_element in zip(team_elements, distance_elements):\n",
     "                team_name = team_element.text.strip()\n",
-    "                distance_total = distance_element.text.strip()\n",
+    "                distance_total = distance_element.text.strip().replace(' km', '')  # remove ' km' from the string\n",
     "\n",
     "                insert_data_query = '''\n",
-    "                    INSERT INTO bundesliga_distance_stats_last_season (matchday, team_id, distance_total) ###### LAST SEASON #########\n",
+    "                    INSERT INTO bundesliga_distance_stats_last_season (matchday, team_id, distance_total)\n",
     "                    VALUES (%s, %s, %s);\n",
     "                    '''\n",
     "                team_id = get_team_id(team_name)\n",
-    "            \n",
-    "                cursor.execute(insert_data_query, (matchday, team_id, float(distance_total.replace(',', '.'))))\n",
+    "\n",
+    "                if team_id is not None:  # make sure team_id is not None\n",
+    "                    cursor.execute(insert_data_query, (matchday, team_id, float(distance_total.replace(',', '.'))))\n",
     "                            \n",
-    "                connection.commit()\n",
+    "                    connection.commit()\n",
+    "                else:\n",
+    "                    print(f'Team ID not found for team {team_name}')\n",
     "        except Exception as e:\n",
-    "            connection.rollback\n",
+    "            connection.rollback()\n",
     "            print(f'Fehler beim Einfügen der Daten für Spieltag {matchday} und Laufleistung:', str(e))\n",
     "\n",
     "    else:\n",
@@ -284,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +412,7 @@
     "        if team_id is not None:\n",
     "            cursor = conn.cursor()\n",
     "            cursor.execute(\"INSERT INTO last_season (team_id, goals, shots_total, touches_total, pass_percentage) VALUES (%s, %s, %s, %s, %s)\", (team_id, goals_total, shots_total, touches_total, pass_percentage))\n",
-    "        #    conn.commit()  ?\n"
+    "            conn.commit()  \n"
    ]
   }
  ],
