--- a/machineLearning/decision_tree.ipynb
+++ b/machineLearning/decision_tree.ipynb
@@ -54,12 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Titel\n",
-    "\n",
-    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
-    "\n",
-    "</span>\n",
-    "Verbindung zur Datenbank herstellen"
+    "#### Verbindung zur Datenbank herstellen"
    ]
   },
   {
@@ -68,7 +63,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Verbindung zur Datenbank herstellen\n",
     "conn = psycopg2.connect(\n",
     "    host=\"localhost\",\n",
     "    database=\"PSQL_ADSFS2023Gruppe15\",\n",
@@ -82,11 +76,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Titel\n",
-    "\n",
-    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
-    "\n",
-    "</span>"
+    "#### SQL Queries für die DB Abfrage\n",
+    "#### Anschliessend die Daten aus den DB Tabellen lesen und in Dataframes speichern\n",
+    "#### Zusammenfassen aller Daten in ein einziges DataFrame"
    ]
   },
   {
@@ -95,21 +87,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SQL Queries für die DB Abfrage\n",
     "query_tabelle = \"SELECT team_id, mannschaft, punkte, tore FROM bundesliga_mannschaften\"\n",
     "query_resultate = \"SELECT matchday, id_teamh, id_teamg, tore_teamh, tore_teamg FROM bundesliga_resultate\"\n",
     "query_shots_stats = \"SELECT matchday, team_id, shots_total FROM bundesliga_shots_stats\"\n",
     "query_duel_stats = \"SELECT matchday, team_id, duels_total, duels_won FROM bundesliga_duels_stats\"\n",
     "query_pass_stats = \"SELECT matchday, team_id, pass_complete, pass_failed, pass_total, pass_percentage FROM bundesliga_pass_stats\"\n",
     "\n",
-    "# Daten aus DB Tabellen lesen\n",
     "df_tabelle = pd.read_sql(query_tabelle, conn)\n",
     "df_resultate = pd.read_sql(query_resultate, conn)\n",
     "df_shots = pd.read_sql(query_shots_stats, conn)\n",
     "df_duels = pd.read_sql(query_duel_stats, conn)\n",
     "df_pass = pd.read_sql(query_pass_stats, conn)\n",
     "\n",
-    "# Zusammenfassen aller Daten in ein einziges DataFrame\n",
     "merged_df = pd.merge(df_resultate, df_tabelle, left_on='id_teamh', right_on='team_id')\n",
     "merged_df = pd.merge(merged_df, df_tabelle, left_on='id_teamg', right_on='team_id', suffixes=('_home', '_guest'))\n",
     "merged_df = pd.merge(merged_df, df_shots, left_on=['id_teamh', 'matchday'], right_on=['team_id', 'matchday'])\n",
@@ -128,9 +117,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Titel\n",
+    "#### Erstellen und Evaluieren eines Mehrfachausgabe-Entscheidungsbaum-Regressionsmodells\n",
     "\n",
     "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "\n",
+    "1. Zuerst werden Eingabematrix `X` und Zielvektor `y` aus dem DataFrame `merged_df_dummies` erstellt. \n",
+    "2. Dann werden diese Daten in Trainings- und Testdatensätze aufgeteilt, wobei 70% der Daten zum Training und 30% zum Testen verwendet werden.\n",
+    "3. Ein `MultiOutputRegressor` Modell, basierend auf einem `DecisionTreeRegressor`, wird erstellt.\n",
+    "4. Das Modell wird dann mit den Trainingsdaten trainiert und auf den Testdaten getestet.\n",
+    "5. Schliesslich wird der Mittlere Quadratische Fehler (MSE) berechnet, um die Leistung des Modells zu bewerten.\n",
+    "\n",
     "\n",
     "</span>"
    ]
@@ -141,15 +137,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Variablen definieren\n",
     "X = merged_df_dummies.drop(['id_teamh', 'id_teamg', 'tore_teamh', 'tore_teamg', 'matchday'], axis=1)\n",
     "y = merged_df_dummies[['tore_teamh', 'tore_teamg']]\n",
     "\n",
-    "# Daten in Trainings- und Testset splitten\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
     "\n",
     "\n",
-    "# Decision tree classifier Objekt erstellen\n",
     "multioutput = MultiOutputRegressor(DecisionTreeRegressor(random_state=42))\n",
     "multioutput.fit(X_train, y_train)\n",
     "y_pred = multioutput.predict(X_test)\n",
