gemäss letztem commit

--- a/machineLearning/random_forest.ipynb
+++ b/machineLearning/random_forest.ipynb
@@ -59,6 +59,8 @@
    "source": [
     "import psycopg2\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
