--- a/APIs/football_api.ipynb
+++ b/APIs/football_api.ipynb
@@ -5,10 +5,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Abfrage einer API Schnittstell zum sammeln von Daten\n",
+    "#### Abfrage einer API Schnittstell zum sammeln von Daten\n",
+    "\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "\n",
     "In diesem File wir Code erstellt, der mit Hilfe einer API Daten abfragen und speichern kann. Die Daten werden zwischen gespeichert und in einem Nächsten SChritt verarbeitet und in die DB gespeichert.\n",
     "\n",
-    "Folgend sieht man die benötigten Imports für diesen Teilbereich."
+    "Folgend sieht man die benötigten Imports für diesen Teilbereich.\n",
+    "\n",
+    "</span>"
    ]
   },
   {
@@ -27,11 +32,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Vorbereitung der Variablen\n",
+    "#### Vorbereitung der Variablen\n",
+    "\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "\n",
     "In folgendem Abschnitt werden alle Variablen definiert, welche benötigt werden, um die Daten zu holen und anschliessend zu speichern.\n",
     "\n",
     "Bei den drei Request handelt es sich um verschiedene URLs die sich auf eine API beziehen.\n",
-    "Die Listen werden benötigt, um die Daten die von der API kommen zwischen zu speichern und weiter zu verarbeiten"
+    "Die Listen werden benötigt, um die Daten die von der API kommen zwischen zu speichern und weiter zu verarbeiten\n",
+    "\n",
+    "</span>"
    ]
   },
   {
@@ -57,7 +67,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Request - Daten der gesamten Saison\n",
+    "#### 1. Request - Daten der gesamten Saison\n",
+    "\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
     "\n",
     "Der gegebene Codeabschnitt führt verschiedene Operationen durch, um Daten von einer API abzurufen und in eine JSON-Datei zu speichern. Hier ist eine Zusammenfassung:\n",
     "\n",
@@ -66,7 +78,8 @@
     "    3. Eine JSON-Datei wird geöffnet, und nur die Zeilen, bei denen \"matchIsFinished\" wahr (True) ist, werden in eine neue          Datenliste kopiert.\n",
     "    4. Die gesammelten Daten werden in der JSON-Datei mit einer Einrückung von 4 gespeichert.\n",
     "\n",
-    "Zusammenfassend ruft der Code eine API auf, filtert die Daten nach einem bestimmten Kriterium und speichert die gefilterten Daten in einer JSON-Datei."
+    "Zusammenfassend ruft der Code eine API auf, filtert die Daten nach einem bestimmten Kriterium und speichert die gefilterten Daten in einer JSON-Datei.\n",
+    "</span>"
    ]
   },
   {
@@ -92,13 +105,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "\n",
     "    1. Ein JSON-Datei wird in ein Tabellenformat umgewandelt und in einem DataFrame mit dem Namen \"df\" gespeichert.\n",
+    "\n",
     "    2. Unnötige Spalten im DataFrame werden entfernt.\n",
+    "\n",
     "    3. Die Zeilen im DataFrame, bei denen \"matchIsFinished\" wahr (True) ist, werden ausgewählt.\n",
+    "\n",
     "    4. Durch Iteration über jede Datenreihe im DataFrame werden Daten in verschiedenen Listen gespeichert.\n",
+    "    \n",
     "    5. Einzelne Ergebnisse werden aus dem DataFrame extrahiert und in Variablen gespeichert.\n",
     "\n",
-    "Zusammenfassend liest der Code eine JSON-Datei in ein DataFrame ein, filtert und extrahiert relevante Daten und speichert sie in Listen und Variablen."
+    "Zusammenfassend liest der Code eine JSON-Datei in ein DataFrame ein, filtert und extrahiert relevante Daten und speichert sie in Listen und Variablen.\n",
+    "</span>"
    ]
   },
   {
@@ -131,11 +151,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Request - Daten der gesamten Saison\n",
+    "#### 2. Request - Daten der gesamten Saison\n",
+    "\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
     "\n",
     "    1. Es wird eine HTTP-GET-Anforderung an eine bestimmte URL gesendet, und die Antwort wird in der Variable \"response2\" gespeichert.\n",
+    "\n",
     "    2. Die Antwort wird in das Python-Datenformat konvertiert und in der Variablen \"data2\" gespeichert.\n",
-    "    3. Die Daten werden in einer JSON-Datei gespeichert."
+    "\n",
+    "    3. Die Daten werden in einer JSON-Datei gespeichert.\n",
+    "\n",
+    "</span>"
    ]
   },
   {
@@ -160,10 +186,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Request - Daten der gesamten Saison\n",
+    "#### 3. Request - Daten der gesamten Saison\n",
+    "\n",
+    "<span style=\"font-family: Arial; font-size: 11pt;\">\n",
+    "\n",
     "    1. Es wird eine HTTP-GET-Anforderung an eine bestimmte URL gesendet, und die Antwort wird in der Variable \"response3\" gespeichert.\n",
+    "\n",
     "    2. Die Antwort wird in das Python-Datenformat konvertiert und in der Variablen \"data3\" gespeichert.\n",
-    "    3. Die Daten werden in einer JSON-Datei gespeichert."
+    "\n",
+    "    3. Die Daten werden in einer JSON-Datei gespeichert.\n",
+    "\n",
+    "</span>"
    ]
   },
   {
@@ -192,12 +225,12 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.9 | packaged by conda-forge | (main, Jan 11 2023, 15:15:40) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "cf1ba55af98fa155eb6f9507898a012b292e4dea61caf6d17930c9c692d43aca"
+    "hash": "a37b286354bbfa49b681235477156423a78583b7807841e2526717de7ee72f3f"
    }
   }
  },
