--- a/APIs/football_api.ipynb
+++ b/APIs/football_api.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Vorbereitung der Variablen\n",
+    "### Vorbereitung der Variablen\n",
     "In folgendem Abschnitt werden alle Variablen definiert, welche benötigt werden, um die Daten zu holen und anschliessend zu speichern.\n",
     "\n",
     "Bei den drei Request handelt es sich um verschiedene URLs die sich auf eine API beziehen.\n",
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Request - Daten der gesamten Saison\n",
+    "### 1. Request - Daten der gesamten Saison\n",
     "\n",
     "Der gegebene Codeabschnitt führt verschiedene Operationen durch, um Daten von einer API abzurufen und in eine JSON-Datei zu speichern. Hier ist eine Zusammenfassung:\n",
     "\n",
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Request - Daten der gesamten Saison\n",
+    "### 2. Request - Daten aller Mannschaften\n",
     "\n",
     "    1. Es wird eine HTTP-GET-Anforderung an eine bestimmte URL gesendet, und die Antwort wird in der Variable \"response2\" gespeichert.\n",
     "    2. Die Antwort wird in das Python-Datenformat konvertiert und in der Variablen \"data2\" gespeichert.\n",
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Request - Daten der gesamten Saison\n",
+    "### 3. Request - Daten der Tabelle\n",
     "    1. Es wird eine HTTP-GET-Anforderung an eine bestimmte URL gesendet, und die Antwort wird in der Variable \"response3\" gespeichert.\n",
     "    2. Die Antwort wird in das Python-Datenformat konvertiert und in der Variablen \"data3\" gespeichert.\n",
     "    3. Die Daten werden in einer JSON-Datei gespeichert."
